--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,19 @@
 body{
   background-color: #222;
 }
+
+div.tooltip {
+  line-height: 1;
+  font-weight: bold;
+  padding: 12px;
+  color: rgb(240, 213, 61);  
+  position: absolute;			
+  text-align: center;			
+  max-width: 2000px;					
+  max-height: 200px;				
+  font: 12px sans-serif;		
+  background: gray;	
+  border: 0px;		
+  border-radius: 8px;			
+  pointer-events: none;	
+}
